--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -45,13 +45,15 @@ jobs:
           # login using environment variables: 
           password=$(aws ecr get-login-password)
           echo $password | docker login -u AWS $REPO --password-stdin
-          # docker tag hello-world:latest aws_account_id.dkr.ecr.region.amazonaws.com/hello-repository
+          docker tag $IMAGE:0 $REPO/$IMAGE:$VERSION
+          docker push $REPO/$IMAGE:$VERSION 
+
           #docker tag $IMAGE:0 $REPO
-          #docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION          
-          docker image tag $IMAGE:0 $REPO/$IMAGE
+          #docker tag $IMAGE:0 $REPO/$IMAGE:$VERSION          
+          #docker tag $IMAGE:0 $REPO/$IMAGE:latest
           # docker push aws_account_id.dkr.ecr.region.amazonaws.com/hello-repository
-          docker push $REPO
+          #docker push $REPO
           #docker image push $REPO/$IMAGE:$VERSION           
-          docker image push $REPO/$IMAGE
+          #docker image push $REPO/$IMAGE
           echo ---
      
