--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -1,27 +1,27 @@
 name: Create API-service test Docker image
 on: push
 
-env:    
-  
+env:  
   IMAGE: test-api-service
   VERSION: 2.2.${{github.run_number}}
   SRC_PATH: examples/nginx api devops/api service
 
 jobs:
-  create_image:
+  create image:
     name: Create Docker image for Nginx API service
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
     
-      - name: build
+      - name: Build Docker image
         run: |
           echo "### Build the image using the Dockerfile"
           cd "$SRC_PATH"
           docker image build -t $IMAGE .
           echo ---
-      - name: publish on DockerHub
+
+      - name: Publish on DockerHub
         env:
           REPO: ${{secrets.DOCKERHUB_USERID}}
         run: |
@@ -33,7 +33,8 @@ jobs:
           docker image push $REPO/$IMAGE:$VERSION 
           docker image push $REPO/$IMAGE:latest
           echo ---
-      - name: publish on AWS ECR
+
+      - name: Publish on AWS ECR
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_DEVOP_ACCESS_KEY}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_DEVOP_ACCESS_SECRET}}
