--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -41,22 +41,22 @@ jobs:
       #    docker image push $REPO/$IMAGE:latest
       #    echo ---
 
-      - name: Publish on AWS ECR
-        env:
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_DEVOP_ACCESS_KEY}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_DEVOP_ACCESS_SECRET}}
-          AWS_REGION: eu-central-1
-          REPO: ${{secrets.AWS_ECR_URL}}
-        run: |
-          echo "### Push image on AWS ECR"
-          # login using environment variables: 
-          password=$(aws ecr get-login-password)
-          echo $password | docker login -u AWS $REPO --password-stdin
-          docker tag $IMAGE $REPO/$IMAGE:$VERSION
-          docker tag $IMAGE $REPO/$IMAGE:latest
-          docker push $REPO/$IMAGE:$VERSION          
-          docker push $REPO/$IMAGE:latest 
-          echo ---
+      #- name: Publish on AWS ECR
+      #  env:
+      #    AWS_ACCESS_KEY_ID: ${{secrets.AWS_DEVOP_ACCESS_KEY}}
+      #    AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_DEVOP_ACCESS_SECRET}}
+      #    AWS_REGION: eu-central-1
+      #    REPO: ${{secrets.AWS_ECR_URL}}
+      #  run: |
+      #    echo "### Push image on AWS ECR"
+      #    # login using environment variables: 
+      #    password=$(aws ecr get-login-password)
+      #    echo $password | docker login -u AWS $REPO --password-stdin
+      #    docker tag $IMAGE $REPO/$IMAGE:$VERSION
+      #    docker tag $IMAGE $REPO/$IMAGE:latest
+      #    docker push $REPO/$IMAGE:$VERSION          
+      #    docker push $REPO/$IMAGE:latest 
+      #    echo ---
   
   publish_dockerhub:
     name: Publish image on DockerHub
@@ -71,7 +71,7 @@ jobs:
         uses: docker/load-image-action@v3
         with:
           file: docker-image-artifact/docker-image.tar
-      - name: Publish on DockerHub 2
+      - name: Publish on DockerHub
         env:
           REPO: ${{secrets.DOCKERHUB_USERID}}
         run: |
