ci: error if imege file not found

--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           name: docker-artifact
           path: image.tar
+          if-no-files-found: error
 
       #- name: Publish on DockerHub
       #  env:
