--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           echo "### Build the image using the Dockerfile"
           cd "$SRC_PATH"
-          docker image build -t $IMAGE .
-          docker save $IMAGE > image.tar
+          docker image build -t $IMAGE . | docker save $IMAGE > image.tar
+          ls
           echo ---
 
       - name: Create artifact
