--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: docker-artifact
-          path: image.tar
+          path: ./image.tar
           if-no-files-found: error
 
       #- name: Publish on DockerHub
