github action debug is a waste of time. We need real tools like TeamCity not this console rubbish commands

--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -32,7 +32,8 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: docker-artifact
-          path: ./image.tar
+          #path: ./image.tar
+          path: stocazzo.txt
           if-no-files-found: error
 
       #- name: Publish on DockerHub
