--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Get immage artifact
         uses: actions/download-artifact@v3
         with:
-          name: docker-image
+          name: docker-artifact
       - name: Load Docker image
         run: |
           echo load docker image
