--- a/examples/nginx api devops/api service/Dockerfile
+++ b/examples/nginx api devops/api service/Dockerfile
@@ -12,7 +12,10 @@ COPY package.json ./package.json
 COPY src/ ./
 
 #VOLUME /devops/secrets:/secrets
-VOLUME /secrets
+# specify the container path to mount and being visible to the host
+# it can be defined in the host using docker run -v or --mount flags
+# using the "volumes" in docker-compose
+VOLUME /secrets 
 
 #ENV PORT 3005
 EXPOSE 3005
