ci: setup docker compose file

--- a/examples/nginx api devops/api service/Dockerfile
+++ b/examples/nginx api devops/api service/Dockerfile
@@ -1,11 +1,10 @@
-#FROM alpine:latest
-FROM node:18-alpine AS dependencies
+FROM node:19-alpine AS dependencies
 
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install --omit=dev --frozen-lockfile
 
-FROM node:18-alpine AS runner
+FROM node:19-alpine AS runner
 WORKDIR /app
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY package.json ./package.json
@@ -15,10 +14,10 @@ COPY src/ ./
 # specify the container path to mount and being visible to the host
 # it can be defined in the host using docker run -v or --mount flags
 # using the "volumes" in docker-compose
-VOLUME /secrets 
+#VOLUME /secrets 
 
 #ENV PORT 3005
-EXPOSE 3005
+#EXPOSE 3005
 #ENV config_file_path /devop/conf/api-service/configuration.json
 
 CMD ["node", "./index.js"]
