--- a/examples/nginx api devops/api service/Dockerfile
+++ b/examples/nginx api devops/api service/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:19-alpine AS dependencies
 
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install --omit=dev --frozen-lockfile
+#COPY package.json package-lock.json ./
+COPY package.json yarn.lock ./
+RUN yarn install --omit=dev --frozen-lockfile
 
 FROM node:19-alpine AS runner
 WORKDIR /app
 COPY --from=dependencies /app/node_modules ./node_modules
-#COPY package.json ./package.json
-COPY yarn.lock ./yarn.lock
+COPY package.json ./package.json
 COPY src/ ./
 
 #VOLUME /devops/secrets:/secrets
