--- a/examples/nginx api devops/compose.local.yml
+++ b/examples/nginx api devops/compose.local.yml
@@ -11,13 +11,13 @@ services:
       context: api service
       dockerfile: Dockerfile
     environment:
-      - config_file_path=/devop/config/api-service/configuration.json
+      - config_file_path=/devop/api-service.config.json
       - server_port=3001
     ports: 
-      - 3008:3001
+      - 3108:3001
     volumes:
       # /path/on/host:/path/in/container
-      - d:/Programming/devop:/devop
+      - d:/Programming/devop/learning-docker:/devop
     
 #volumes:
 #  devop:
