--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   create_image:
-    name: Create Docker image for Nginx API service
+    name: Create Docker image for API service
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,36 +28,6 @@ jobs:
           path: image.tar
           if-no-files-found: error
 
-      #- name: Publish on DockerHub
-      #  env:
-      #    REPO: ${{secrets.DOCKERHUB_USERID}}
-      #  run: |
-      #    echo "### DockerHub login and Push image \"$IMAGE:$VERSION\" "
-      #    #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} $DOCKERHUB_URL --password-stdin   
-      #    echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin           
-      #    docker image tag $IMAGE $REPO/$IMAGE:$VERSION
-      #    docker image tag $IMAGE $REPO/$IMAGE:latest
-      #    docker image push $REPO/$IMAGE:$VERSION 
-      #    docker image push $REPO/$IMAGE:latest
-      #    echo ---
-
-      #- name: Publish on AWS ECR
-      #  env:
-      #    AWS_ACCESS_KEY_ID: ${{secrets.AWS_DEVOP_ACCESS_KEY}}
-      #    AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_DEVOP_ACCESS_SECRET}}
-      #    AWS_REGION: eu-central-1
-      #    REPO: ${{secrets.AWS_ECR_URL}}
-      #  run: |
-      #    echo "### Push image on AWS ECR"
-      #    # login using environment variables: 
-      #    password=$(aws ecr get-login-password)
-      #    echo $password | docker login -u AWS $REPO --password-stdin
-      #    docker tag $IMAGE $REPO/$IMAGE:$VERSION
-      #    docker tag $IMAGE $REPO/$IMAGE:latest
-      #    docker push $REPO/$IMAGE:$VERSION          
-      #    docker push $REPO/$IMAGE:latest 
-      #    echo ---
-  
   publish_dockerhub:
     name: Publish image on DockerHub
     needs: create_image
@@ -109,3 +79,17 @@ jobs:
           docker push $REPO/$IMAGE:$VERSION          
           docker push $REPO/$IMAGE:latest 
           echo ---
+  
+  deploy_script:
+    name: "Deploy script on server"    
+    needs: publish_ECR
+    runs-on: ubuntu-latest
+    steps:
+      - name: run script
+        run: |
+          echo run deploy script
+          #ssh ${{secrets.devop_user}}@${secrets.server_ip}
+          ssh ${{secrets.devop_user}}@${{server_ip}} /devop/learning-docker/api-service/deploy.sh
+    
+
+
