--- a/examples/nginx api devops/devops/compose.template.yml
+++ b/examples/nginx api devops/devops/compose.template.yml
@@ -5,14 +5,16 @@ name: test-api-service
 services:
   api:
     container_name: API
-    image: alessandropiccione/test-api-service:latest
+    #image: alessandropiccione/test-api-service:latest
+    # user that run this script should have ECR permission
+    image: {docker-image}
     restart: on-failure
     environment:
       - config_file_path=/devop/config.json
       - server_port=3010
     ports: 
-      - 80:3010
+      - 81:3010
     volumes:
       # /path/on/host:/path/in/container
-      - /devop/api-service:/devop
+      - /devop/learning-docker/api-service:/devop
 
