--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -88,8 +88,7 @@ jobs:
       - name: run script
         run: |
           echo run deploy script
-          #ssh ${{secrets.devop_user}}@${secrets.server_ip}
-          ssh ${{secrets.devop_user}}@${{server_ip}} /devop/learning-docker/api-service/deploy.sh
+          ssh ${{secrets.DEVOP_USER}}@${{secrets.SERVER_IP}} /devop/learning-docker/api-service/deploy.sh
     
 
 
