--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -88,7 +88,7 @@ jobs:
       - name: run script
         run: |
           echo run deploy script
-          ssh -i ${{secrets.SERVER_SSH_PRIVATE_KEY}} ${{secrets.DEVOP_USER}}@${{secrets.SERVER_IP}} /devop/learning-docker/api-service/deploy.sh
+          ssh -i "${{secrets.SERVER_SSH_PRIVATE_KEY}}" ${{secrets.DEVOP_USER}}@${{secrets.SERVER_IP}} /devop/learning-docker/api-service/deploy.sh
     
 
 
