--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -92,7 +92,7 @@ jobs:
           echo run deploy script
           mkdir -p ~/.ssh
           echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
-          less ~/.ssh/id_rsa
+          ssh-keyscan -H ${{secrets.SERVER_IP}} > ~/.ssh/known_hosts          
           chmod 600 ~/.ssh/id_rsa          
           ssh -i ~/.ssh/id_rsa ${{secrets.DEVOP_USER}}@${{secrets.SERVER_IP}} /devop/learning-docker/api-service/deploy.sh
           rm ~/.ssh/id_rsa
