--- a/examples/nginx api devops/devops/compose.template.yml
+++ b/examples/nginx api devops/devops/compose.template.yml
@@ -18,3 +18,9 @@ services:
       # /path/on/host:/path/in/container
       - /devop/learning-docker/api-service:/devop
 
+  nginx:
+    contailner_name: nginx
+    image: nginx
+    restart: on-failure
+    #environment:
+
