--- a/examples/nginx api devops/devop/compose.template.yml
+++ b/examples/nginx api devops/devop/compose.template.yml
@@ -19,8 +19,9 @@ services:
       - /devop/learning-docker/api-service:/devop
 
   nginx:
-    contailner_name: nginx
+    container_name: nginx
     image: nginx
     restart: on-failure
     #environment:
+    
 
