--- a/examples/nginx api devops/devop/nginx.template.conf
+++ b/examples/nginx api devops/devop/nginx.template.conf
@@ -1,10 +1,10 @@
-events { }
+events {}
 
 http {
     upstream api-server {
         #server 172.20.0.10:3005;
         #server 172.20.0.11:3005;
-        server 127.0.0.1:3101;
+        server 127.0.0.1:{api-service-port};
     }
 
     server {
@@ -17,11 +17,11 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
         location / {
-            #proxy_pass http://127.0.0.1:81;            
+            proxy_pass http://127.0.0.1:81;            
             #proxy_pass http://google.com;
             #proxy_pass http://test-api:81;  
             #proxy_pass http://172.18.0.2:3000;
-            proxy_pass http://api-server;
+            #proxy_pass http://api-server;
             proxy_redirect     off;
         }
     }
