--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     upstream api-service{
         #server 127.0.0.1:3101;
-        server api:3001;
+        server api:3001;  # service name in docker-compose
     }
 
     server {
