--- a/examples/nginx api devops/devop/compose.template.yml
+++ b/examples/nginx api devops/devop/compose.template.yml
@@ -12,16 +12,21 @@ services:
     environment:
       - config_file_path=/devop/config.json
       - server_port=3010
-    ports: 
-      - 81:3010
+    #ports: 
+    #  - 81:3010
     volumes:
       # /path/on/host:/path/in/container
       - /devop/learning-docker/api-service:/devop
-
+   
   nginx:
-    container_name: nginx
-    image: nginx
+    depends_on: [api]
+    container_name: NGINX
     restart: on-failure
-    #environment:
-    
-
+    #build:
+    #  context: nginx
+    #  dockerfile: Dockerfile
+    image: nginx:latest
+    ports: 
+      - 81:80
+    networks: 
+      - my-network
