pass version to service

--- a/.github/workflows/deploy nginx-api-devop.yml
+++ b/.github/workflows/deploy nginx-api-devop.yml
@@ -7,7 +7,7 @@ on:
 env:  
   IMAGE: test-api-service
   VERSION: 2.2.${{github.run_number}}
-  SRC_PATH: examples/nginx api devops/api service
+  SRC_PATH: examples/nginx api devops
 
 jobs:
   create_image:
@@ -18,15 +18,14 @@ jobs:
         uses: actions/checkout@v3    
       - name: Build Docker image
         run: |
-          cd "$SRC_PATH"
-          docker image build -t $IMAGE .
+          cd "$SRC_PATH/api service"
+          docker image build -t $IMAGE --build-arg VERSION=$VERSION .
           echo save image.tar
           docker save $IMAGE > ../../../image.tar
       - name: Create artifact
         uses: actions/upload-artifact@v3
         with:
           name: docker-artifact
-          #path: $SRC_PATH/image.tar
           path: image.tar
           if-no-files-found: error
 
