--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -7,7 +7,8 @@ http {
     }
 
     server {
-        listen 80 default;
+        listen 80;
+        server_name test.monei.it;
 
         location / {
             #proxy_pass http://127.0.0.1:81;
