--- a/.github/workflows/deploy nginx-api-devop-nginx.yml
+++ b/.github/workflows/deploy nginx-api-devop-nginx.yml
@@ -6,7 +6,7 @@ on:
 
 env:  
   IMAGE: test-api-service-nginx
-  #VERSION: 2.2.${{github.run_number}}
+  VERSION: 2.2.${{github.run_number}}
   SRC_PATH: examples/nginx api devops
 
 jobs:
