--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -10,6 +10,8 @@ http {
         listen 80;
         server_name test.monei.it;
 
+        proxy_set_header Host $host;
+
         location / {
             #proxy_pass http://127.0.0.1:81;
             proxy_pass http://api-service;
