--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -11,6 +11,7 @@ http {
         server_name test.monei.it;
 
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
 
         location / {
             #proxy_pass http://127.0.0.1:81;
