--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -9,6 +9,7 @@ http {
     server {
         listen 80 default;
         server_name test.monei.it;
+        server_name test.monei.it:90;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
