--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -2,20 +2,17 @@ events {}
 
 http {
     upstream api-service{
-        #server 127.0.0.1:3101;
         server api:3001;  # service name in docker-compose
     }
 
     server {
-        listen 80 default;
+        listen 80;
         server_name test.monei.it;
-        server_name test.monei.it:90;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
         location / {
-            #proxy_pass http://127.0.0.1:81;
             proxy_pass http://api-service;
         }
     }
