add wwwroot to nginx

--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -15,5 +15,9 @@ http {
         location / {
             proxy_pass http://api-service;
         }
+
+        localtion /.well-known/acme-challenge/ {
+            root /wwwroot;
+        }
     }
 }
