--- a/examples/nginx api devops/devop/compose.template.yml
+++ b/examples/nginx api devops/devop/compose.template.yml
@@ -27,6 +27,8 @@ services:
     image: {nginx-docker-image}
     ports: 
       - 90:80
+    volumes:
+      - /devop/learning-docker/nginx/wwwroot:/wwwroot
     networks: 
       - my-network
 
