--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -16,7 +16,7 @@ http {
             proxy_pass http://api-service;
         }
 
-        localtion /.well-known/acme-challenge/ {
+        location /.well-known/acme-challenge/ {
             root /wwwroot;
         }
     }
