--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -7,6 +7,7 @@ http {
 
     server {
         listen 80;
+        listen 443 ssl;
         server_name test.monei.it;
 
         proxy_set_header Host $host;
@@ -16,6 +17,7 @@ http {
             proxy_pass http://api-service;
         }
 
+        # required for Certbot
         location /.well-known/acme-challenge/ {
             root /wwwroot;
         }
