update certificate files

--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -13,6 +13,12 @@ http {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
+        #ssl_certificate /devop/nginx-host/ssl_certificate.crt;
+        #ssl_certificate_key /path/to/ssl_certificate.key;
+
+        ssl_certificate /cert/fullchain.pem;
+        ssl_certificate_key /cert/privatekey.pem;
+
         location / {
             proxy_pass http://api-service;
         }
