--- a/examples/nginx api devops/devop/compose.template.yml
+++ b/examples/nginx api devops/devop/compose.template.yml
@@ -29,6 +29,7 @@ services:
       - 90:80
     volumes:
       - /devop/learning-docker/nginx/wwwroot:/wwwroot
+      - /etc/letsencrypt/live/test.monei.it:/cert
     networks: 
       - my-network
 
