--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -16,14 +16,14 @@ http {
         #ssl_certificate /devop/nginx-host/ssl_certificate.crt;
         #ssl_certificate_key /path/to/ssl_certificate.key;
 
-        ssl_certificate /cert/fullchain.pem;
+        ssl_certificate /cert/cert.pem;
         ssl_certificate_key /cert/privatekey.pem;
 
         location / {
             proxy_pass http://api-service;
         }
 
-        # required for Certbot
+        # required for Certbot challenge
         location /.well-known/acme-challenge/ {
             root /wwwroot;
         }
