--- a/examples/nginx api devops/nginx/config/nginx.conf
+++ b/examples/nginx api devops/nginx/config/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     server {
         listen 80;
-        listen 443 ssl;
+        #listen 443 ssl;
         server_name test.monei.it;
 
         proxy_set_header Host $host;
@@ -16,8 +16,8 @@ http {
         #ssl_certificate /devop/nginx-host/ssl_certificate.crt;
         #ssl_certificate_key /path/to/ssl_certificate.key;
 
-        ssl_certificate /cert/cert.pem;
-        ssl_certificate_key /cert/privatekey.pem;
+        #ssl_certificate /cert/cert.pem;
+        #ssl_certificate_key /cert/privatekey.pem;
 
         location / {
             proxy_pass http://api-service;
