--- a/examples/nginx api devops/devop/compose.template.yml
+++ b/examples/nginx api devops/devop/compose.template.yml
@@ -29,7 +29,8 @@ services:
       - 90:80
     volumes:
       - /devop/learning-docker/nginx/wwwroot:/wwwroot
-      - /etc/letsencrypt/live/test.monei.it:/cert
+      #- /etc/letsencrypt/live/test.monei.it:/cert
+      - /devop/learning-docker/nginx/cert/config/live/test.monei.it:/cert
     networks: 
       - my-network
 
