--- a/examples/nginx api devops/devop/nginx.conf
+++ b/examples/nginx api devops/devop/nginx.conf
@@ -9,15 +9,13 @@ http {
         listen 80;
         #listen 443 ssl;
         server_name test.monei.it;
-
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
-        #ssl_certificate /devop/nginx-host/ssl_certificate.crt;
-        #ssl_certificate_key /path/to/ssl_certificate.key;
-
+        #disable_symlinks off; # certbot creates symlink files
         #ssl_certificate /cert/cert.pem;
-        #ssl_certificate_key /cert/privatekey.pem;
+        #ssl_certificate_key /cert/privkey.pem;
 
         location / {
             proxy_pass http://api-service;
