--- a/examples/nginx api devops/nginx/Dockerfile
+++ b/examples/nginx api devops/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 # Copy custonm nginx config
-COPY config/nginx.conf /etc/nginx/nginx.conf
+# COPY config/nginx.conf /etc/nginx/nginx.conf
 
 #RUN sed
   
